# melon_ros2

./: .env  .gitignore  Dockerfile  LICENSE  README.md  build.sh  dependencies.repos  install.sh
doc/: App_README.md  release_note.md
melon_ws/src/melon_bringup/: package.xml  setup.cfg  setup.py
melon_ws/src/melon_bringup/launch/: melon_bringup.launch.py
melon_ws/src/melon_demo/: package.xml  setup.cfg  setup.py
melon_ws/src/melon_demo/melon_demo/: manipulation_demo.py  melon.py
melon_ws/src/melon_description/: README.md  package.xml  setup.py
melon_ws/src/melon_description/launch/: display.launch.py  gazebo.launch.py
melon_ws/src/melon_description/meshes/: ballfoint.stl  base_link.stl  body_1.stl  body_2.stl  body_3.stl  factoryRobot_v2.stl  factoryRobot_v2_4ball.stl  left_wheel_1.stl  lider_1.stl  right_wheel_1.stl  wheel.stl
melon_ws/src/melon_description/urdf/: base_v2.gazebo.xacro  base_v2.ros2control.xacro  base_v4.xacro  materials.xacro  melon.urdf  melon.urdf.xacro
melon_ws/src/melon_moveit_config/: .setup_assistant  CMakeLists.txt  README.md  package.xml
melon_ws/src/melon_moveit_config/config/: Melon.ros2_control.xacro  Melon.srdf  Melon.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  sensors_3d.yaml  sensors_3d_no_octomap.yaml  sensors_3d_octomap.yaml
melon_ws/src/melon_moveit_config/launch/: demo.launch.py  melon_moveit.launch.py  melon_moveit_octomap.launch.py
melon_ws/src/melon_navigation2/: README.md  package.xml  setup.cfg  setup.py
(+15 files in other folders)
