<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>melon_description</name>
  <version>0.0.0</version>
<description>URDF descriptions and meshes for the Melon robot</description>
  <maintainer email="c0b230860d@edu.teu.ac.jp">SSatoya</maintainer>
  <license>MIT</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
